# ffmpeg_test

app/: build.gradle
app/src/androidTest/java/com/json/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_json_ffmpegdemo_VideoManager.cpp
app/src/main/cpp/include/libavutil/: common.h
app/src/main/java/com/json/ffmpegdemo/: Info.java  MainActivity.java  VideoManager.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/json/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
